fix: review card container collapsing
fix: for loop in getReview() generating incorrect number of cards

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -279,7 +279,7 @@ a {
 .card-container--review {
     z-index: 2;
     display: grid;
-    grid-template-columns: 37.5rem 1fr;
+    grid-template-columns: 38.5rem;
     grid-auto-rows: max-content;
     align-content: center;
     gap: 2.5rem;
